# streamdiffusion

./: .gitignore  README.md  pyproject.toml
scripts/: bridge_settings.sh  cleanup_legacy_cuda_python.sh  common.sh  env_cuda.sh  fix_inference_deps.sh  install_attention_deps.sh  install_dit_deps.sh  install_flux2_klein_deps.sh  install_modelopt_deps.sh  install_pytorch_cu128.sh  install_pytorch_cu132.sh  install_segmentation_deps.sh  install_streamdiffusion_deps.sh  install_tensorrt_deps.sh  install_upscaler_deps.sh  pytorch_cu132_env.sh  resolve_pytorch_cu128_versions.py  resolve_pytorch_cu132_versions.py  run_bridge_daemon.sh  run_bridge_instance.sh  run_bridge_screen.sh  run_passthrough.sh  run_streamdiffusion.sh  sdtd-bridge.service  setup_blackwell_linux.sh  sync_to_hal.sh
streamdiffusion_td_bridge/: __init__.py  accel.py  accel_log.py  attention.py  blackwell.py  bridge.py  cli.py  composite.py  config.py  control.py  control_server.py  cuda_compat.py  daydream_api.py  defaults.py  deps.py  diffusers_compat.py  frames.py  latency_probe.py  maxine_upscaler.py  modelopt_support.py  ndi_io.py  person_segmentation.py  sdtd_mapper.py  stream_worker.py  touchdesigner_helper.py  upscaler.py  verify_attention.py  verify_gpu.py  verify_inference.py  verify_tensorrt.py
toe/: sdremote-b.toe  sdremote1.toe
touchdesigner/: DUAL_INSTANCES.md  README.md  SDTD_REMOTE.md  build_hal_control.py  build_hal_control_ui.py  build_instance.py  build_ndi_video_path.py  build_vidout_combine.py  export_network_layout.py  hal_control_defs.py  hal_control_ui_build.py  hal_remote_sync.py  (+9 more)
